# waymark

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml  verify-homebrew-token.yml
docs/: waymark-mvp.md
src/: db.rs  fasd.rs  lib.rs  main.rs  ranking.rs  zsh.rs
tests/: cli.rs  fasd_import.rs  zsh_integration.rs
